# kem-timelapse-studio

./: .gitignore  README.md  pyproject.toml
docs/: benchmarking.md  operator-guide.md  third-party-licenses.md
docs/superpowers/plans/: 2026-07-18-kem-timelapse-mvp.md
docs/superpowers/specs/: 2026-07-18-kem-timelapse-content-pack-design.md
packaging/: kem-timelapse.spec
scripts/: build_macos.sh  smoke_app.py
src/kem_timelapse/: __init__.py  cli.py  composition.py
src/kem_timelapse/analysis/: __init__.py  analyzer.py  features.py  presets.py  roi.py  sampling.py  segmenter.py
src/kem_timelapse/audio/: __init__.py  backends.py  models.py  pipeline.py  ranges.py
src/kem_timelapse/compose/: __init__.py  composer.py  presets.py
src/kem_timelapse/domain/: __init__.py  errors.py  models.py
src/kem_timelapse/editing/: __init__.py  commands.py  session.py
src/kem_timelapse/framing/: __init__.py  crop.py  models.py  watermark.py
src/kem_timelapse/ingest/: __init__.py  preflight.py  service.py
src/kem_timelapse/jobs/: __init__.py  cancellation.py  events.py  runner.py  state_machine.py
src/kem_timelapse/media/: __init__.py  probe.py  process.py  proxy.py
src/kem_timelapse/quality/: __init__.py  benchmark.py  metrics.py  report.py
src/kem_timelapse/render/: __init__.py  filtergraph.py  manifest.py  models.py  renderer.py  validator.py
src/kem_timelapse/storage/: __init__.py  atomic.py  fingerprint.py  project_repository.py
tests/e2e/: test_acceptance_recording.py
tools/: __init__.py  benchmark.py  generate_test_media.py
(+55 files in other folders)
