[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "kem-timelapse"
version = "0.1.0"
description = "Local painting timelapse and ASMR Content Pack studio"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "opencv-python-headless>=4.10",
  "platformdirs>=4.2",
  "pydantic>=2.7",
  "pydub>=0.25",
  "PySide6>=6.7",
  "typer>=0.12",
]

[project.optional-dependencies]
deepfilter = ["deepfilternet>=0.5"]
dev = [
  "mypy>=1.10",
  "pyinstaller>=6.8",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pytest-qt>=4.4",
  "ruff>=0.5",
]

[project.scripts]
kem-timelapse = "kem_timelapse.cli:app"
kem-timelapse-desktop = "kem_timelapse.ui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kem_timelapse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "media: requires ffmpeg and ffprobe",
  "deepfilter: requires the optional DeepFilterNet backend",
  "e2e: requires the private acceptance recording",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["kem_timelapse"]
